# concurrency-v2

Lab1/Lab1-go/: go.mod  go.sum
Lab1/Lab1-go/cmd/sumcli/: main.go
Lab1/Lab1-go/internal/commands/: commands.go
Lab1/Lab1-go/internal/manager/: manager.go
Lab1/Lab1-go/internal/slicegen/: slicegen.go
Lab1/Lab1-go/internal/strategies/: regular.go  single.go  strategy.go  timing.go  worker_pool.go
Lab1/Lab1-java/: build.gradle  settings.gradle
Lab1/Lab1-java/gradle/wrapper/: gradle-wrapper.properties
Lab1/Lab1-java/src/main/java/org/example/: Main.java
Lab1/Lab1-java/src/main/java/org/example/array/: ArrayGenerator.java
Lab2/lab2-go/: go.mod
Lab2/lab2-go/cmd/app/: main.go
Lab2/lab2-go/internal/calculator/: calculator.go  parallel.go  single.go
Lab2/lab2-go/internal/slicegen/: slicegen.go
Lab2/lab2-go/internal/timer/: timer.go
Lab2/lab2-java/: build.gradle  settings.gradle
Lab2/lab2-java/gradle/wrapper/: gradle-wrapper.properties
Lab2/lab2-java/src/main/java/org/array/: ArrayGenerator.java
Lab2/lab2-java/src/main/java/org/example/: Main.java
Lab2/lab2-java/src/main/java/org/sum/calculator/: ExecutorSumCalculator.java  ForkJoinSumCalculator.java  (+4 more)
Lab3/: docker-stack.yaml  justfile  run_mpi_local.sh
Lab3-old/program/: CMakeLists.txt  main.cpp
Lab3-old/program/array/: array.h
Lab3-old/program/calc/: calc.h  normal.cpp
Lab3-old/program/timer/: timer.h
Lab3/program/: .dockerignore  Dockerfile  justfile  main.cpp  run_mpi.sh
Lab3/program/array/: array.cpp
Lab3/program/calc/: factory.cpp  wave.cpp
Lab3/program/timer/: timer.cpp
(+24 files in other folders)
